--- a/config/AutoTranslatorConfig.ini
+++ b/config/AutoTranslatorConfig.ini
@@ -4,7 +4,7 @@ FallbackEndpoint=
 
 [General]
 Language=zh-CN
-FromLanguage=ja
+FromLanguage=auto
 
 [Files]
 Directory=Translation\{Lang}\Text
@@ -23,7 +23,7 @@ EnableFairyGUI=True
 
 [Behaviour]
 MaxCharactersPerTranslation=200
-IgnoreWhitespaceInDialogue=True
+IgnoreWhitespaceInDialogue=False
 MinDialogueChars=20
 ForceSplitTextAfterCharacters=0
 CopyToClipboard=False
